force-app/main/default/objects/Milestone1_Nag__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>IF( Project__c &lt;&gt; null, HYPERLINK(Project__c, &quot;Project Link&quot;),
IF( Project_Milestone__c &lt;&gt; null, HYPERLINK(Project__c, &quot;Milestone Link&quot;),
IF( Project_Task__c &lt;&gt; null, HYPERLINK(Project__c, &quot;Task Link&quot;),&#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>