force-app/main/default/objects/Milestone1_Nag__c/fields/Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type__c</fullName>
    <formula>IF( Project__c &lt;&gt; null, &#39;Project&#39;,
IF( Project_Milestone__c &lt;&gt; null, &#39;Milestone&#39;,
IF( Project_Task__c &lt;&gt; null, &#39;Task&#39;,&#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Type</label>
    <type>Text</type>
</CustomField>